===================
astroid's ChangeLog
===================

What's New in astroid 2.4.3?
============================
Release Date: TBA


What's New in astroid 2.4.2?
============================
Release Date: 2020-06-08

* `FunctionDef.is_generator` properly handles `yield` nodes in `While` tests

  Close PyCQA/pylint#3519

* Properly construct the arguments of infered property descriptors

  Close PyCQA/pylint#3648


What's New in astroid 2.4.1?
============================
Release Date: 2020-05-05

* Handle the case where the raw builder fails to retrieve the ``__all__`` attribute

  Close #772

* Restructure the AST parsing heuristic to always pick the same module

  Close PyCQA/pylint#3540
  Close #773

* Changed setup.py to work with [distlib](https://pypi.org/project/distlib)

  Close #779

* Do not crash with SyntaxError when parsing namedtuples with invalid label

  Close PyCQA/pylint#3549

* Protect against ``infer_call_result`` failing with `InferenceError` in `Super.getattr()`

  Close PyCQA/pylint#3529


What's New in astroid 2.4.0?
============================
Release Date: 2020-04-27

* Expose a ast_from_string method in AstroidManager, which will accept
  source code as a string and return the corresponding astroid object

  Closes PyCQA/astroid#725

* ``BoundMethod.implicit_parameters`` returns a proper value for ``__new__``

  Close PyCQA/pylint#2335

* Allow slots added dynamically to a class to still be inferred

  Close PyCQA/pylint#2334

* Allow `FunctionDef.getattr` to look into both instance attrs and special attributes

  Close PyCQA/pylint#1078

* Infer qualified ``classmethod`` as a classmethod.

  Close PyCQA/pylint#3417

* Prevent a recursion error to happen when inferring the declared metaclass of a class

  Close #749

* Raise ``AttributeInferenceError`` when ``getattr()`` receives an empty name

  Close PyCQA/pylint#2991

* Prevent a recursion error for self reference variables and `type()` calls.

  Close #199
