@@ -6,6 +6,10 @@ What's New in astroid 2.4.3?
 ============================
 Release Date: TBA
 
+* Fix a crash caused by a lookup of a monkey-patched method
+
+  Close PyCQA/pylint#3686
+
 
 What's New in astroid 2.4.2?
 ============================
